--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "langchain>=0.1.0",
     "langgraph>=0.0.40",
     "langchain-openai>=0.0.5",
+    "langchain-ollama>=0.1.0",
     "fastapi>=0.109.0",
     "uvicorn[standard]>=0.27.0",
     "sqlalchemy>=2.0.25",
@@ -33,6 +34,21 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+# Open source LLM providers
+huggingface = [
+    "langchain-huggingface>=0.0.3",
+    "transformers>=4.36.0",
+    "accelerate>=0.25.0",
+]
+
+# All open source options
+opensource = [
+    "langchain-ollama>=0.1.0",
+    "langchain-huggingface>=0.0.3",
+    "transformers>=4.36.0",
+    "accelerate>=0.25.0",
+]
+
 dev = [
     "pytest>=7.4.0",
     "pytest-asyncio>=0.23.0",
